Change the code to use the openpty(3) API which uses the pts(4) driver instead of the pty(4) driver.

PR:		184597
Submitted by:	tobias.rehbein
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@273548 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f